dtsi:aion/sensor: sx937x bringup
  1.update sar params.
  2.mt6879-moto-common-overlay.dtsi

Change-Id: Ib4fc530514c8b99dc956aa63b9dd7121ef101537
Signed-off-by: weimh1@motorola.com <weimh1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2422534
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
@@ -669,50 +669,45 @@
 		Semtech,ref-phases-b = <6>;
 		Semtech,ref-phases-c = <0xff>;
 		Semtech,button-flag = <0x1f>;
-		Semtech,reg-num = <57>;
+		Semtech,reg-num = <52>;
 		Semtech,reg-init = <
 			0x8024  0x7F00
 			0x4004  0x70
 			0x4008  0x8
 			0x8020  0x32
-			0x8028  0x86E 		/*AFE_PARAM_PH0*/
-			0x8034  0x86E 		/*AFE_PARAM_PH1*/
-			0x8040  0x86E 		/*AFE_PARAM_PH2*/
-			0x804C  0x896 		/*AFE_PARAM_PH3*/
-			0x8058  0x88E 		/*AFE_PARAM_PH4*/
-			0x8064  0x86E 		/*AFE_PARAM_PH5*/
-			0x8070  0x86E 		/*AFE_PARAM_PH6*/
-			0x807C  0x8AE  		/*AFE_PARAM_PH7*/
+			0x8028  0x85E 		/*AFE_PARAM_PH0*/
+			0x8034  0x85E 		/*AFE_PARAM_PH1*/
+			0x8040  0x85E 		/*AFE_PARAM_PH2*/
+			0x804C  0x85E 		/*AFE_PARAM_PH3*/
+			0x8058  0x85E 		/*AFE_PARAM_PH4*/
+			0x8064  0x85E 		/*AFE_PARAM_PH5*/
+			0x8070  0x85E 		/*AFE_PARAM_PH6*/
+			0x807C  0x85E  		/*AFE_PARAM_PH7*/
 			/*set CS3 to hiz, because it used as IRQ pin*/
-			0x8030  0xFFF9FD 	/*REG_AFEPH_PH0, CS0, ANT1, Bottom center*/
-			0x803C  0xFEF9FF 	/*REG_AFEPH_PH1, CS5, ANT2, Top Right*/
-			0x8048  0xFFD9FF 	/*REG_AFEPH_PH2, CS4, ANT7, Bottom Right*/
-			0x8054  0xF7F9FF 	/*REG_AFEPH_PH3, CS6, ANT3/5/10, Top Left*/
-			0x8060  0xBFF9FF 	/*REG_AFEPH_PH4, CS7, ANT4/6/9, Right*/
-			0x806C  0xFFF9EF 	/*REG_AFEPH_PH5, CS1, ANT1_REF, Bottom_Ref*/
-			0x8078  0xFFF97F 	/*REG_AFEPH_PH6, CS2, ANT9 REF, Right*/
-			0x8084  0xBFF9FF 	/*REG_AFEPH_PH7, NOT USE*/
-			0x8098  0x7232
-			0x80B8  0x7232
-			0x80D8  0x6060
-			0x80F8  0x6969
-			0x8118  0x6969
-			0x8138  0xFF
-			0x8158  0xFF
-			0x8178  0xFF
-			0x80A0  0x1E1E0001
-			0x80E0  0x20200001
-			0x8100  0xA0A0002
-			0x8188  0x8000005
-			0x818C  0x8000006
-			0x8090  0x41DC3000
-			0x80B0  0x7FBB3000
-			0x80D0  0x40CE3000
-			0x80F0  0x68BD3000
-			0x8110  0x2EE13000
-			0x8130  0x2AD67000
-			0x8150  0x2AD67000
-			0x8170  0x2AD67000
+			0x8030  0xFFF9FD 	/*REG_AFEPH_PH0, CS0, ANT0, Bottom center*/
+			0x803C  0xFFD9FF 	/*REG_AFEPH_PH1, CS4, ANT1, Top Right*/
+			0x8048  0xFEF9FF 	/*REG_AFEPH_PH2, CS5, ANT2, Bottom Right*/
+			0x8054  0xF7F9FF 	/*REG_AFEPH_PH3, CS6, ANT3/7, Top Left*/
+			0x8060  0xBFF9FF 	/*REG_AFEPH_PH4, CS7, ANT4, Right*/
+			0x806C  0xFFF9EF 	/*REG_AFEPH_PH5, CS1, ANT0_REF, Bottom_Ref*/
+			0x8078  0xFFF97F 	/*REG_AFEPH_PH6, CS2, ANT1_3_4_7 REF, Right*/
+			0x8084  0xFFF9FF 	/*REG_AFEPH_PH7, NOT USE*/
+			0x8098  0x5A40
+			0x80B8  0x5A40
+			0x80D8  0x5A5A
+			0x80F8  0x5A5A
+			0x8118  0x5A5A
+			0x8138  0x5A40
+			0x8158  0x5A40
+			0x8178  0x5A40
+			0x8090  0x54AC5000
+			0x80B0  0x54AC5000
+			0x80D0  0x54AC5000
+			0x80F0  0x54AC5000
+			0x8110  0x54AC5000
+			0x8130  0x54AC5000
+			0x8150  0x54AC5000
+			0x8170  0x54AC5000
 			0x8088  0x300000
 			0x80A8  0x300000
 			0x80C8  0x300000
