--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -59,6 +59,7 @@
 };
 
 &i2c6 {
+	clock-frequency = <400000>;
 	haptic_hv@5A {
 		compatible = "awinic,haptic_hv";
 		reg = <0x5A>;
@@ -71,8 +72,8 @@
 		mode = /bits/ 8 < 5 >;
 		aw8671x_gain_bypass = /bits/ 8 < 1 >;
 		aw8671x_brk_bst_md = /bits/ 8 < 0 >;
-		aw8671x_cont_drv1_lvl = /bits/ 8 < 0x7F >;
-		aw8671x_cont_lra_vrms = < 1000 >; /* Motor rated voltage, mV */
+		aw8671x_cont_drv1_lvl = /bits/ 8 < 0x50 >;
+		aw8671x_cont_lra_vrms = < 1800 >; /* Motor rated voltage, mV */
 		aw8671x_cont_brk_time = /bits/ 8 < 0x08 >;
 		aw8671x_cont_tset = /bits/ 8 < 0x06 >;
 		aw8671x_cont_bemf_set = /bits/ 8 < 0x02 >;
@@ -80,8 +81,8 @@
 		aw8671x_cont_brk_gain = /bits/ 8 < 0x08 >;
 		aw8671x_cont_bst_brk_gain = /bits/ 8 < 0x05 >;
 		aw8671x_cont_wait_num = /bits/ 8 < 0x06 >;
-		aw8671x_cont_drv1_time = /bits/ 8 < 0x04 >;
-		aw8671x_cont_drv2_time = /bits/ 8 < 0x14 >;
+		aw8671x_cont_drv1_time = /bits/ 8 < 0xEE >;
+		aw8671x_cont_drv2_time = /bits/ 8 < 0xEE >;
 		aw8671x_duration_time = /bits/ 8 < 20 30 60 >;
 		aw8671x_d2s_gain = /bits/ 8 < 0x04 >;
 		aw8671x_trig_config = /bits/ 8 < 0 0 0 1 0 2 0 0
