londonna: add ov50a actuator
add ov50a actuator gt9764
This modify reference DUBAI DW9800V

Change-Id: I6fed9a78dc4c3a6d0d9b71eff3d9095068f83729
Signed-off-by: Xiaofeng Wang <wangxf32@mt.com>
Reviewed-on: https://gerrit.mot.com/2423665
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Suna Li <lisn17@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/lens/vcm/v4l2/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/Makefile
@@ -15,3 +15,4 @@ obj-$(CONFIG_MTK_V4L2_LENS)   += bu64253gwz/
 obj-$(CONFIG_MTK_V4L2_LENS)   += dw9800v/
 obj-$(CONFIG_MTK_V4L2_LENS)   += mot_dubai_dw9800v/
 obj-$(CONFIG_MTK_V4L2_LENS)   += mot_dubai_ak7377a/
+obj-$(CONFIG_MTK_V4L2_LENS)   += mot_aion_gt9764/
