arm64/dts: disable initcall debug on devonf
We can not get full kernel message during boot due to it prints
too much initcall debug message.
Turn initcall debug off.

Change-Id: I6e7ac6a09c5c3991ebbe572f4670f5cae1191b63
Reviewed-on: https://gerrit.mot.com/2423878
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -20,6 +20,17 @@
 
 #include <dt-bindings/iio/mt635x-auxadc.h>
 
+&chosen {
+	bootargs = "console=tty0  root=/dev/ram \
+		    loglevel=8 \
+		    8250.nr_uarts=4 \
+		    androidboot.hardware=mt6855 \
+		    transparent_hugepage=never \
+		    vmalloc=400M swiotlb=noforce allow_file_spec_access \
+		    firmware_class.path=/vendor/firmware pelt=8 \
+		    loop.max_part=7";
+};
+
 &pmic_adc {
 	vin4_100k {
 		channel = <AUXADC_VIN4>;
