aion: bring up hi1336 actuator dw9800v[1/3]
aion:
--bring up hi1336 actuator dw9800v

Change-Id: I53c4c74c3cb57569fec0258dd79330a5b8c8c934
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2424685
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Xu Ji <jixu@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
@@ -47,6 +47,11 @@
 			remote-endpoint = <&main_af>;
 		};
 	};
+	port@2 {
+		wide_af_endpoint: endpoint {
+			remote-endpoint = <&wide_af>;
+		};
+	};
 };
 
 &i2c6 {
@@ -78,6 +83,19 @@
 		port {
 			main_af: endpoint {
 				remote-endpoint = <&main_af_endpoint>;
+			};
+		};
+	};
+};
+
+&i2c8 {
+	camera_af_wide@18 {
+		compatible = "mediatek,mot_aion_dw9800v";
+		reg = <0x18>;
+		vin-supply = <&cam_uw_afvdd_ldo>;
+		port {
+			wide_af: endpoint {
+				remote-endpoint = <&wide_af_endpoint>;
 			};
 		};
 	};
