--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -48,7 +48,7 @@
                 aw99703,turn-on-ramp = <0x00>; /* 512us */
                 aw99703,turn-off-ramp = <0x04>; /* 8ms */
                 aw99703,pwm-trans-dim = <0>; /* 2ms */
-                aw99703,i2c-trans-dim = <1>; /* 128ms */
+                aw99703,i2c-trans-dim = <0>;
                 aw99703,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
                 aw99703,map-type = <4>; /* 0 exponential, 4 linear */
                 aw99703,work-mode = <1>; /* backlight */
