charge: Remove PE4(PD3.0) for Devonn
We only support PD2.0(9V2A) for Devonn.
So reset fast_charGing_indicator and the set input current to 2A.

Change-Id: Ib99b220ee31c9a7cbed31f025ff5ca2bc5d8add2
Signed-off-by: Guocheng wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2424914
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -22,7 +22,7 @@
 	disable_aicl;
 
 	/*pe4 && pdc && pe2*/
-	fast_charging_indicator = <0x0E>;
+	fast_charging_indicator = <0x06>;
 
 	/* charging current */
 	usb_charger_current_suspend = <0>;
@@ -68,7 +68,7 @@
 	pd_vbus_upper_bound = <9000000>;
 
 	/* single charger */
-	sc_input_current = <3000000>;
+	sc_input_current = <2000000>;
 	sc_charger_current = <4000000>;
 };
 
