arm64/dts: temp disable kaslr on devonf
In order to debug panic during reboot, MTK suggests to disable kaslr to get parse-able
PC address.
So, temp disable kaslr for couple builds and try to get valid ramdump.

Change-Id: Ifd17b5c618eaa7b39b0db1ce9d10d6a040e7f4c6
Reviewed-on: https://gerrit.mot.com/2426141
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -23,6 +23,7 @@
 &chosen {
 	bootargs = "console=tty0  root=/dev/ram \
 		    loglevel=8 \
+		    nokaslr \
 		    8250.nr_uarts=4 \
 		    androidboot.hardware=mt6855 \
 		    transparent_hugepage=never \
