--- a/arch/arm64/boot/dts/mediatek/aion-wl2864c.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-wl2864c.dtsi
@@ -6,7 +6,7 @@
 		status = "ok";
 		compatible = "wl2864c";
 		reg = <0x29>;
-		enable_gpio = <&pio 103 0x0>;
+		//enable_gpio = <&pio 103 0x0>;
 		semi,cs-gpios = <&pio 168 0x0>;
 		regulator_nb = "ldo1", "ldo2",
 				"ldo3", "ldo4",
