aion: support ov50e ov50a bringup
Factory need sensor0 can bringup ov50a and ov50e.
This modify is temp.

Change-Id: I9992315c005008490fc67135a253053663bec1f1
Signed-off-by: Xiaofeng Wang <wangxf32@mt.com>
Reviewed-on: https://gerrit.mot.com/2429883
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Suna Li <lisn17@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
@@ -312,7 +312,8 @@
 
 	sensor0: sensor0@20 {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "mot_aion_ov50a_mipi_raw";
+		sensor-names = "mot_aion_ov50a_mipi_raw",
+				"mot_aion_ov50e_mipi_raw";
 		reg = <0x20>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
