--- a/drivers/gpu/drm/mediatek/mediatek_v2/Kconfig
+++ b/drivers/gpu/drm/mediatek/mediatek_v2/Kconfig
@@ -47,3 +47,11 @@ config MTK_RECU_FENCE_LOCK
 	  reduced to zero in fence signal flow because of linux fence
 	  limitation. So the option will control whether display run
 	  workaround flow.
+
+config DISP_ESD_NOTIFY_SUPPORT
+        bool "enable medietak display esd recvy notification"
+        default n
+        help
+          To set display recvy notification support.
+          Some panel need LCM send notification for TP recover when LCD reset.
+          If unsure, set N.
