kernel/disp:devonf:enable DISP_ESD_NOTIFY_SUPPORT for devonf
mtk disp: support devonf 1st nvt touch invalid after esd recovy
enable DISP_ESD_NOTIFY_SUPPORT config

Change-Id: I6840372fc413c7d742f7bdb7e6866c115923fe9d
Signed-off-by: lbh <longc134@motorola.com>
Reviewed-on: https://gerrit.mot.com/2431902
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jing Hu <hujing3@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -85,6 +85,7 @@ CONFIG_GATEIC_OCP2138=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 
 CONFIG_MTK_CLKBUF_NFC=y
+CONFIG_DISP_ESD_NOTIFY_SUPPORT=y
 
 
 #Moto devonf Camera
