aion: bring up hi1336 actuator gt9772[2/3]
aion:
-- bring up hi1336 actuator gt9772

Change-Id: Iad128a87986224bcf4bf5fd949fbf68a388f1621
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2432226
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
@@ -47,6 +47,11 @@
 			remote-endpoint = <&main_af>;
 		};
 	};
+	port@1 {
+		fm_af_endpoint: endpoint {
+			remote-endpoint = <&fm_af>;
+		};
+	};
 	port@2 {
 		wide_af_endpoint: endpoint {
 			remote-endpoint = <&wide_af>;
@@ -101,8 +106,17 @@
 	};
 };
 
-&pio {
-
+&i2c4 {
+	camera_af_fm@18 {
+		compatible = "mediatek,mot_aion_gt9772";
+		reg = <0x18>;
+		vin-supply = <&cam_fm_afvdd_ldo>;
+		port {
+			fm_af: endpoint {
+				remote-endpoint = <&fm_af_endpoint>;
+			};
+		};
+	};
 };
 
 &mtk_composite_v4l2_1 {
