arm/dts: config rcable level
config rcable level

Pick from
https://gerrit.mot.com/2358345
https://gerrit.mot.com/#/c/2366666/

Change-Id: I724b7f0f73e1670203879778ddc8bb039a522a45
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2433384
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -266,10 +266,10 @@
 		start_vbat_max = <4450>;
 		idvchg_term = <500>;
 		idvchg_step = <50>;
-		ita_level = <3000 2500 2000 1500>;
-		rcable_level = <350 400 500 600>;
-		ita_level_dual = <6200 3700 3400 3000>;
-		rcable_level_dual = <230 350 450 550>;
+		ita_level = <3000 2400 1900 1500>;
+		rcable_level = <270 310 350 500>;
+		ita_level_dual = <6200 2400 1900 1500>;
+		rcable_level_dual = <230 310 350 500>;
 		idvchg_ss_init = <1000>;
 		idvchg_ss_step = <250>;
 		idvchg_ss_step1 = <100>;
@@ -310,6 +310,7 @@
 		mmi_therm_vol_thres = <80>;
 		mmi_therm_step = <3>;
 		mmi_max_ibat = <12400>;
+		mmi_max_hrst_cnt = <2>;
 };
 
 &i2c0 {
