arm/dts: add thermal config for devonn
For HW test the thermal config invalid after we enable moto thermal
power off algo.(https://gerrit.mot.com/#/c/2395948/)
And them has update the thermal config,so we need add charge_trip7
and charge_trip8 config follow thermal config.

Change-Id: I3b476a15c3b9b0f1858258b7fc86c1294a70397b
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2433585
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Wei <weiweij@motorola.com>
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -232,6 +232,16 @@
 			hysteresis = <2000>;
 			type = "passive";
 		};
+		charge_trip7: charge-trip7 {
+			temperature = <47000>;
+			hysteresis = <2000>;
+			type = "passive";
+		};
+		charge_trip8: charge-trip8 {
+			temperature = <48000>;
+			hysteresis = <2000>;
+			type = "passive";
+		};
 	};
 
 	cooling-maps {
@@ -263,11 +273,19 @@
 			trip = <&charge_trip6>;
 			cooling-device = <&charger_cooler 7 7>;
 		};
+		charge-cdev7 {
+			trip = <&charge_trip7>;
+			cooling-device = <&charger_cooler 8 8>;
+		};
+		charge-cdev8 {
+			trip = <&charge_trip8>;
+			cooling-device = <&charger_cooler 9 9>;
+		};
 	};
 };
 
 &charger_cooler {
 	bootmode = <&chosen>;
 	mmi,thermal-mitigation = <(-1) 2700000 2200000 2000000 1800000
-				1600000 1200000 900000 500000>;
+				1600000 1200000 900000 600000 300000>;
 };
