thermal: Add CHARGER STATE NUM Config
When the thermal config too many state with  different
temperature, we need to modify define CHARGER_STATE_NUM value.
So add a CONFIG to modify CHARGER_STATE_NUM.

Change-Id: I1ad2d70acf0a9d8a9e2995c2f4777d97703b0104
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2433600
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Wei <weiweij@motorola.com>
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/thermal/mediatek/Kconfig
+++ b/drivers/thermal/mediatek/Kconfig
@@ -116,4 +116,9 @@ config MTK_THERMAL_JATM
 	  to optimize game UX under a proper Tskin control.
 	  It will take care of both better user experience and Tskin control.
 
+config MOTO_THERMAL_CHARGER_STATE_NUM
+	int "Set MOTO charger cooling state number"
+	default 9
+	help
+	  This is to set MOTO charger cooling state number.
 endif
