arm/config: Set CHARGER STATE NUM
For devonn, the thermal config has ten states,
so we need set the CHARGER_STATE_NUM to 10.

Change-Id: Ia83dd1f70a7ad61d430249998df2cc042f74ca86
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2433629
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -98,3 +98,4 @@ CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 
 #enable thermal power on/off algo
 CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
+CONFIG_MOTO_THERMAL_CHARGER_STATE_NUM=10
