arm64/dts: fix VTS failure due to bootargs overlay
We overlaied bootargs to disable initcall_debug but it fails VTS test.
According to Google, bootargs_ext should be used because DTO canot
concatenate values from main DT and overlay DT.
Fix it by using bootargs_ext in overlay DT.

Change-Id: I746d5b20dbaa4b8057a5f10148d964533a401046
Reviewed-on: https://gerrit.mot.com/2434296
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -21,15 +21,8 @@
 #include <dt-bindings/iio/mt635x-auxadc.h>
 
 &chosen {
-	bootargs = "console=tty0  root=/dev/ram \
-		    loglevel=8 \
-		    nokaslr \
-		    8250.nr_uarts=4 \
-		    androidboot.hardware=mt6855 \
-		    transparent_hugepage=never \
-		    vmalloc=400M swiotlb=noforce allow_file_spec_access \
-		    firmware_class.path=/vendor/firmware pelt=8 \
-		    loop.max_part=7";
+	bootargs_ext = "nokaslr \
+		    initcall_debug=0";
 };
 
 &pmic_adc {
