Revert "(CR):kernel/Devonn:Fix charGing interface has no backlight."
Modify:
 Devonn:Set the backlight 11bit to make it more accurate

This reverts commit 2fa17bd01975231cdd845d787855e99b7f0080f2.

Change-Id: Ibf82acf2d6213f56317b1e5eda836467df85553e
Reviewed-on: https://gerrit.mot.com/2434437
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -76,9 +76,9 @@
 	backlight {
 		label = "lcd-backlight";
 		led_mode = <6>;
-		max-brightness = <255>;/*for lk mapping*/
+		max-brightness = <2047>;
 		max-hw-brightness = <2047>;
-		default-brightness = <153>;
+		default-brightness = <1810>;
 	};
 };
 
