arm64/dts: re-enable kaslr on devonf
[Details]
Re-enable kaslr on devonf due to HWT panic was confirmed as
LK watchdog panic.

Change-Id: I7abbc32bb42709b378cb67797b3e9af96ac6a9c3
Reviewed-on: https://gerrit.mot.com/2435738
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -21,8 +21,7 @@
 #include <dt-bindings/iio/mt635x-auxadc.h>
 
 &chosen {
-	bootargs_ext = "nokaslr \
-		    initcall_debug=0";
+	bootargs_ext = "initcall_debug=0";
 };
 
 &pmic_adc {
