devonn/dts:Amend aw99703 pin config
Modify:
 The pin configuration is wrong, which once
 caused that it could not be read after
 being switched on to the kernel

Change-Id: If08b276e44ad3b7583efb390791c239bcfe38ee1
Signed-off-by: bijiaming <wingte73@motorola.com>
Reviewed-on: https://gerrit.mot.com/2440189
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -32,7 +32,7 @@
 		compatible = "awinic,aw99703-bl","ktd,ktd3136";
 		reg = <0x36>;
 		id = <6>;
-		hwen-gpio = <&pio 161 1>;
+		aw99703,hwen-gpio = <&pio 161 1>;
 		lk_hwen-gpio = <161>;
 		status = "okay";
 
