arch/dts:devonf: add brightness setting for low battery UI
devonf:add brightness setting
for low battery charGing UI

Change-Id: I5920337009f744823ac0c153daf0ae134ce5d411
Signed-off-by: longch98 <longch98@motorola.com>
Reviewed-on: https://gerrit.mot.com/2440364
Reviewed-by: Jing Hu <hujing3@mt.com>
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-charger.dtsi
@@ -356,3 +356,8 @@
 	mmi,adc-channel-batid = <3>;
 	mmi,adc-channel-vbat = <100>;
 };
+
+&lk_charger {
+       /* LCD brightness*/
+       led_brightness = <1023>;
+};
