arm/dts: set lcd brightness for low battery UI
Because devonn has modify max brightness.
(https://gerrit.mot.com/#/c/2434437)
So we need to set lcd brightness for low battery charGing UI.

Change-Id: Id5fcf8817e802c42cd30069879855197fc2a7125
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2443134
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -175,6 +175,9 @@
 	/*boot voltage*/
 	boot_battery_voltage = <3560000>;
 
+	/* LCD brightness*/
+	led_brightness = <1023>;
+
 	/* charging current */
 	usb_charger_current = <500000>;
 	ac_charger_input_current = <1500000>;
