aion: modify the wide i2c bus speed
aion:
--modify the wide i2c bus speed
--improve the camera open the kpi

Change-Id: If4ba2e1f720cef3944c31c15aadeaa6d6a132c4b
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2446462
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
@@ -420,7 +420,7 @@
 
 &i2c8 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
 
