arm/dts: enable lpd for landon na
arm/dts/lpd
enalble lpd for landon na

Change-Id: I064176542e96c8ba96756a79716c4fea9a2c0fc3
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2447868
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -11,6 +11,12 @@
  * GNU General Public License for more details.
  */
 
+&mt6375_typec {
+       tcpc,en_wd;
+       tcpc,en_wd_sbu_polling;
+       tcpc,en_wd_polling_only;
+};
+
 &lk_charger {
 	/* charging current */
 	usb_charger_current = <500000>;
