--- a/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
@@ -48,14 +48,16 @@
 		aw99703,auto-freq-low = <0x05>;
 		aw99703,bl-fscal-led = <0x19>; /* 24.8mA */
 		aw99703,bl-channel = <3>;
-                aw99703,turn-on-ramp = <0x00>; /* 512us */
-                aw99703,turn-off-ramp = <0x04>; /* 8ms */
+		aw99703,turn-on-ramp = <0x00>; /* 512us */
+		aw99703,turn-off-ramp = <0x04>; /* 8ms */
 		aw99703,pwm-trans-dim = <0>; /* 2ms */
-                aw99703,i2c-trans-dim = <0>;
+		aw99703,i2c-trans-dim = <1>; /* 128ms */
+		aw99703,skip-first-trans;
+		aw99703,reset-trans-delay;
 		aw99703,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
 		aw99703,map-type = <4>; /* 0 exponential, 4 linear */
 		aw99703,work-mode = <1>; /* backlight */
-                aw99703,default-brightness = <1024>;
+		aw99703,default-brightness = <1024>;
 		aw99703,reinit-brightness = <15>;
 		aw99703,init-seq-enable = <1>;
 		aw99703,init-seq = <0x02 0x04>,
@@ -76,7 +78,9 @@
                 ktd,turn-on-ramp = <0x00>;
                 ktd,turn-off-ramp = <0x04>;
                 ktd,pwm-trans-dim = <0>;
-                ktd,i2c-trans-dim = <1>;
+                ktd,i2c-trans-dim = <128>;
+                ktd,skip-first-trans;
+                ktd,reset-trans-delay;
                 ktd,bl-channel = <3>;
                 ktd,ovp-level = <32>;  /*25.9v or 32v */
                 ktd,ocp-level = <2600>;
