arm/dts: set otg current limit
set otg current limit 1A
mt6375 current limiting gear for 1100000
for devonn

Change-Id: Icd5bdf5e895bbf7129e0994ccdc42e2b7f668129
Signed-off-by: zhangwei04 <zhangwei04@wingtech.com>
Reviewed-on: https://gerrit.mot.com/2450907
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -63,6 +63,10 @@
 	};
 };
 
+&extcon_usb {
+	vbus-current = <1100000>;
+};
+
 &pdc {
 	pd_vbus_low_bound = <5000000>;
 	pd_vbus_upper_bound = <9000000>;
