--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -39,7 +39,7 @@
                 aw99703,bl-map = <3>; /* brightness map level 1:256,2:1024,3:2048 */
                 aw99703,using-lsb;
                 aw99703,ovp-level = <2>; /* 0:17.5V, 1:24V, 2:31V, 3:38V, 4:41.5V */
-                aw99703,ocp-level = <1>; /* 0:0.9A, 1:1.8A, 2:2.7A, 3:3.4A */
+                aw99703,ocp-level = <2>; /* 0:0.9A, 1:1.8A, 2:2.7A, 3:3.4A */
                 aw99703,switch-freq = <1>; /* 1000kHz(default) */
                 aw99703,auto-freq-high = <0x10>;
                 aw99703,auto-freq-low = <0x05>;
@@ -53,6 +53,18 @@
                 aw99703,map-type = <4>; /* 0 exponential, 4 linear */
                 aw99703,work-mode = <1>; /* backlight */
                 aw99703,default-brightness = <1810>;
+                aw99703,init-seq-enable = <1>;
+                aw99703,init-seq = <0x02 0x05>,
+				<0x03 0xC7>,
+				<0x04 0x2a>,
+				<0x05 0x48>,
+				<0x08 0x93>,
+				<0x09 0x04>,
+				<0x0a 0x01>,
+				<0x67 0x1C>,
+				<0x25 0x61>,
+				<0x24 0x4C>,
+				<0x23 0x61>;
 
                 ktd,hwen-gpio = <&pio 161 1>;
                 ktd,using-lsb;
