devonn: arch/arm64:change ktd3136 lk2 reg info to dtsi
Modify:
	Add reg dtsi config in dtsi file.

Change-Id: Ie4cf1cb7d308b44787fb44b4c97a45165a51f5d6
Signed-off-by: bijiaming01 <bijiaming01@wingtech.com>
Reviewed-on: https://gerrit.mot.com/2451259
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -70,14 +70,20 @@
                 ktd,using-lsb;
                 ktd,pwm-frequency = <1>; /* 1MHZ */
                 ktd,bl-fscal-led = <0xC1>; /* 24.2mA */
-                ktd,turn-on-ramp = <0x08>;
+                ktd,turn-on-ramp = <0x00>;
                 ktd,turn-off-ramp = <0x08>;
                 ktd,pwm-trans-dim = <4>;
-                ktd,i2c-trans-dim = <256>;
+                ktd,i2c-trans-dim = <128>;
                 ktd,bl-channel = <3>;
                 ktd,ovp-level = <32>;/* 32V */
                 ktd,switching-frequency = <1>;
-                ktd,inductor-current = <1>;
+                ktd,inductor-current = <2600>;
+                ktd3136,init-seq-enable = <1>;
+                ktd3136,init-seq = <0x02 0xC1>,
+				<0x03 0x2E>,
+				<0x06 0x0F>,
+				<0x07 0x04>,
+				<0x08 0x01>;
 	};
 };
 
