--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -32,7 +32,7 @@
 		pinctrl-1 = <&ctp_gt9896s_int_suspend &ctp_gt9896s_reset_suspend>;
 		pinctrl-2 = <&ctp_gt9896s_stylus_active>;
 		pinctrl-3 = <&ctp_gt9896s_stylus_suspend>;
-		//mmi,status = "/chosen","mmi,panel_name","contains","nt37701";
+		mmi,status = "/chosen","mmi,panel_name","contains","tm_vtdr6115";
 		spi-max-frequency = <9600000>;  /* 4800000,9600000,15000000,19200000 */
 		goodix,reset-gpio = <&pio 159 0x0>;
 		goodix,irq-gpio = <&pio 22 0x2002>;
@@ -45,7 +45,6 @@
 		goodix,panel-max-y = <38400>;
 		goodix,panel-max-w = <256>;
 		goodix,panel-max-p = <256>;
-		goodix,pen-enable;
 		goodix,edge-ctrl;
 		mmi,enable-gestures;
 		mmi,power-off-suspend;
