--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -657,3 +657,20 @@
 		compatible = "mediatek,mtk_sec_video_path_support";
 	};
 };
+
+/* BOB */
+&i2c5 {
+	status = "okay";
+
+	sgm61220@75 {
+		status = "ok";
+		compatible = "sgm62110";
+		reg = <0x75>;
+
+		regulators {
+			bob_buck: ldo1 {
+				regulator-name = "sgm62110-buck";
+			};
+		};
+	};
+};
