arm64/dts: set pre-charge current to 400ma for aion
For AION, the pre-charge current need to under 440mA(0.1C)
base on battery SPEC.And the pre-charge current step of mt6375 is 50mA,
so we need to set pre-charge current 400mA.
(It's base on https://gerrit.mot.com/#/c/2467233/)

Change-Id: I69c1f116f24c7628bfeb24557280c952eb3d6bc9
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2467567
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -28,6 +28,7 @@
 	non_std_ac_charger_current = <1000000>;
 	charging_host_input_current = <1500000>;
 	charging_host_charger_current = <1000000>;
+	pre_charge_current = <400>;
 
 	temp_t4_threshold = <60>;
 };
