dts: remove un-used i2c device
For AION some MTK refs chips are not used. So
we should remove it to avoid some un-expected
issues.

Change-Id: Ic61a4076e4895af8df3a9e190f9c3011a5448413
Signed-off-by: weiweij <weiweij@mt.com>
Reviewed-on: https://gerrit.mot.com/2469827
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Wei <weiweij@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -17,6 +17,20 @@
 #include "mediatek/aion-wl2864c.dtsi"
 #include "mediatek/aion-charger.dtsi"
 
+/*Remove unused i2c device*/
+&rt6160 {
+	status = "disabled";
+};
+
+&ps5169 {
+	status = "disabled";
+};
+
+&gate_ic {
+	status = "disabled";
+};
+/*Remove unused i2c device end*/
+
 &i2c6 {
     aw882xx_smartpa_0: aw882xx@34 {
         compatible = "awinic,aw882xx_smartpa";
