--- a/arch/arm64/boot/dts/mediatek/aion-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-display.dtsi
@@ -125,4 +125,26 @@
 			};
 		};
 	};
+
+	panel3@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
+		compatible = "csot,vtdr6115,vdo,144hz";
+		reg = <3>;
+		pm-enable-gpios = <&pio 164 0>,
+                          <&pio 166 0>,
+                          <&pio 103 0>,
+                          <&pio 165 0>;
+		reset-gpios = <&pio 97 0>;
+		pinctrl-names = "default";
+		lhbm-enable;
+		port {
+			panel_in3: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+	};
 };
