--- a/arch/arm64/boot/dts/mediatek/aion-wl2864c.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-wl2864c.dtsi
@@ -7,6 +7,7 @@
 		compatible = "wl2864c";
 		reg = <0x29>;
 		//enable_gpio = <&pio 103 0x0>;
+                vin2-supply = <&bob_buck>;
 		semi,cs-gpios = <&pio 168 0x0>;
 		regulator_nb = "ldo1", "ldo2",
 				"ldo3", "ldo4",
