--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -42,6 +42,7 @@ CONFIG_OF_GPIO=y
 CONFIG_ZRAM_WRITEBACK=y
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
+CONFIG_MOTO_SGM62110=m
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36518=m
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_aion_ov50a_mipi_raw mot_aion_ov50e_mipi_raw mot_aion_s5kgd2_mipi_raw mot_aion_hi1336_mipi_raw"
