--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -1071,6 +1071,17 @@ config MOTO_WL2864C
 	help
 	  WL2864C is an pmic chip.
 
+
+config MOTO_SGM62110
+        tristate "moto sgm62110 regulator driver"
+	depends on I2C
+	select REGMAP
+	select CRC8
+	select OF_GPIO
+	select REGULATOR_FIXED_VOLTAGE
+	help
+	  sgm62110 is an pmic chip.
+
 config REGULATOR_RT6160
 	tristate "Richtek RT6160 BuckBoost voltage regulator"
 	depends on I2C
