aion: add swtp configuration
Add config to enable AION swtp:
CONFIG_MOTO_AION_SWTP_CUST

swtp logic follow Tesla

Change-Id: I26d4e585f3cc689fc56aa45d4b47c984d2963eae
Signed-off-by: wangsq2 <wangsq2@mt.com>
Reviewed-on: https://gerrit.mot.com/2475521
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiaojun Ji <jixj@motorola.com>
Reviewed-by: Shuxian Zhang <zhangsx1@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -88,3 +88,12 @@ config MOTO_DEVONF_SWTP_CUST
 	  then it is supported, if no,
 	  it is disabled.
 	  The option default disabled.
+
+config MOTO_AION_SWTP_CUST
+	bool "ECCCI aion swtp customization"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables tesla swtp customization, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
