--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-aion.config
@@ -20,4 +20,5 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+CONFIG_MOTO_BYPSS_RF_CABLE_DETECT_SUPPORT=y
 # CONFIG_GAUGE_MT6375 is not set
