--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -97,3 +97,12 @@ config MOTO_AION_SWTP_CUST
 	  then it is supported, if no,
 	  it is disabled.
 	  The option default disabled.
+
+config MOTO_BYPSS_RF_CABLE_DETECT_SUPPORT
+	bool "ECCCI by pass rfcable detection"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables bypass rfcable detection, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
