aion: swtp: add gpio 17 config for swtp2 in dtsi
Propagate from https://gerrit.mot.com/#/c/2240701/

Change-Id: I36a0ef8872a116ad5978cff84864e084fda41c42
Signed-off-by: wangsq2 <wangsq2@mt.com>
Reviewed-on: https://gerrit.mot.com/2476463
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiaojun Ji <jixj@motorola.com>
Reviewed-by: Shuxian Zhang <zhangsx1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -616,6 +616,7 @@
 &swtp_2 {
 	interrupt-parent = <&pio>;
 	interrupts = <17 IRQ_TYPE_LEVEL_HIGH 17 0>;
+	deb-gpios = <&pio 17 0>;
 	debounce = <512>;
 	status = "okay";
 };
