--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -745,6 +745,12 @@ config MOTO_CHG_WT6670F_SUPPORT
         help
           This is to enable MOTO supports of IC WT6670F.
 
+config FORCE_QC3_ICL
+        bool "Force set qc3 input current limit"
+        default n
+        help
+          This is to force set the icl of qc3&qc3+.
+
 config WT6670F_QC3P
         tristate "QC3+ protocal chipset"
         depends on I2C
