config:force set icl for qc3&qc3+
Changes,
Add force_qc3_icl config, it will force set the icl
for qc3 and qc3+ charger.

Change-Id: I5917c2437c6bf38eb55b72b895f5a4b3ced9d2ef
Signed-off-by: Lei Chen <chenlei18@mt.com>
Reviewed-on: https://gerrit.mot.com/2481316
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -68,6 +68,7 @@ CONFIG_WT6670F_QC3P=m
 CONFIG_MOTO_CHG_WT6670F_SUPPORT=y
 CONFIG_CHARGER_SGM415XX=m
 CONFIG_MOTO_CHARGER_SGM415XX=y
+CONFIG_FORCE_QC3_ICL=y
 CONFIG_TCPC_WUSB3801=m
 # Add swtp customization
 CONFIG_MOTO_TESLA_SWTP_CUST=y
