aion: arm64/dts: Import touch double tap feature for gt9916
- Add support gesture type 0x7 for zero tap, single tap
and double tap.

Change-Id: If921e2bb86dacad6c0e87e945e8a3ab5eb492399
Signed-off-by: Jun Weng <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2483040
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-touch.dtsi
@@ -50,6 +50,7 @@
 		mmi,enable-gestures;
 		mmi,power-off-suspend;
 		mmi,usb-charger-detection;
+		mmi,supported_gesture_type = <0x07>;
 		mmi,charger-psy-name = "battery";
 	};
 
