configs:aion:enable okg
enable okg for aion
add related config.

Change-Id: I7086692e2408b24a9349d44fd7d1b14fbc363c9b
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2487200
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -74,3 +74,7 @@ CONFIG_SCSI_SKHID=y
 
 #Moto Aion Camera eeprom
 CONFIG_MTK_EEPROM_PROJECT="aion"
+
+# CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
+CONFIG_MTK_VOW_GVA_SUPPORT=y
+CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
