--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -72,6 +72,8 @@ CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
 
+CONFIG_MOTO_PE50_CV_LOWER_BOUND_GAP_OFF=y
+
 #Moto Aion Camera eeprom
 CONFIG_MTK_EEPROM_PROJECT="aion"
 
