arm/dts: disable bat IR drop compensation
disable bat IR drop compensation for aion to avoid
vbat over spec

Change-Id: I2bcd18fee905cf69174916a71157029da9431be9
Signed-off-by: Haijian Ma <mahj8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2490667
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -20,6 +20,11 @@
        tcpc,en_wd_polling_only;
 };
 
+&mt6375_chg {
+	ircmp_r = <0>;
+	ircmp_v = <0>;
+};
+
 &lk_charger {
 	/* charging current */
 	usb_charger_current = <500000>;
