--- a/arch/arm64/boot/dts/mediatek/aion-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-display.dtsi
@@ -103,7 +103,6 @@
 		pinctrl-names = "default";
 	};
 
-
 	panel2@0 {
 		/delete-property/ compatible;
 		/delete-property/ pm-enable-gpios;
@@ -132,6 +131,28 @@
 		/delete-property/ reset-gpios;
 		/delete-property/gate-ic;
 
+		compatible = "tianma,vtdr6115,vdo,144hz";
+		reg = <1>;
+		pm-enable-gpios = <&pio 164 0>,
+                          <&pio 166 0>,
+                          <&pio 103 0>,
+                          <&pio 165 0>;
+		reset-gpios = <&pio 97 0>;
+		pinctrl-names = "default";
+		lhbm-enable;
+		port {
+			panel_in3: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+	};
+
+	panel4@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
 		compatible = "csot,vtdr6115,vdo,144hz";
 		reg = <3>;
 		pm-enable-gpios = <&pio 164 0>,
@@ -142,7 +163,7 @@
 		pinctrl-names = "default";
 		lhbm-enable;
 		port {
-			panel_in3: endpoint {
+			panel_in4: endpoint {
 				remote-endpoint = <&dsi_out>;
 			};
 		};
