--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -36,6 +36,9 @@
 	pre_charge_current = <400>;
 
 	temp_t4_threshold = <60>;
+
+	/*boot battery voltage when using AC charger*/
+	ac_charger_boot_battery_voltage = <3400000>;
 };
 
 &mtk_ctd {
