arm/dts: Add new boot voltage when using AC charger
Add new boot voltage when using AC charger for AION.
Then DUT can quickly out the DBR stage.
The ac_charger_boot_battery_voltage must be smaller than
boot_battery_voltage.

Change-Id: I78fe541dda7408cbf26b4f81079446def0c636da
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2505163
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -31,6 +31,9 @@
 	pre_charge_current = <400>;
 
 	temp_t4_threshold = <60>;
+
+	/*boot battery voltage when using AC charger*/
+	ac_charger_boot_battery_voltage = <3400000>;
 };
 
 &mtk_ctd {
